--- a/Week 2 css/file4.html
+++ b/Week 2 css/file4.html
@@ -27,7 +27,7 @@
         }
 
         .gallery-item {
-            margin: 10px;
+            margin: 12px;
             border: 2px solid #333;
             overflow: hidden;
             position: relative;
@@ -80,12 +80,23 @@
 
 <h1>Simple Image Gallery</h1>
 
+<div class="gallery">
     <div class="gallery-item">
-        <img src="pic5.png" alt="Image 2">
+        <img src="pic5.png" alt="Image 1">
         <div class="overlay">
             <div class="description">
                 <h3>Camel</h3>
                 <p>Camels do sleep. They actually can sleep standing up, which helps keep them safe from predators. They sleep about six hours per night, and can withstand major temperature changes from the sweltering heat of the day to the cold desert nights..</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="gallery-item">
+        <img src="pic2.png.jpg" alt="Image 2">
+        <div class="overlay">
+            <div class="description">
+                <h3>Squirrel</h3>
+                <p>In most squirrel species, the hind limbs are longer than the fore limbs, while all species have either four or five toes on each foot. The feet, which include an often poorly developed thumb, have soft pads on the undersides[13] and versatile, sturdy claws for grasping and climbing.</p>
             </div>
         </div>
     </div>
